reset root password machine #98
